// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vue-tabs-component can accept a prefix and a suffix for the name 1`] = `
"
            <div id=\\"app\\"><div class=\\"tabsComponent\\"><div class=\\"tabsComponent-tabs\\"><ul><li class=\\"tabsComponent-tab is-active\\"><a href=\\"#first-tab\\"><div>prefixFirst tabsuffix</div></a></li></ul></div> <div class=\\"tabsComponent-panels\\"><div style=\\"\\">
                        First tab content
                    </div></div></div></div>
        "
`;

exports[`vue-tabs-component can mount tabs 1`] = `
"
            <div id=\\"app\\"><div class=\\"tabsComponent\\"><div class=\\"tabsComponent-tabs\\"><ul><li class=\\"tabsComponent-tab is-active\\"><a href=\\"#first-tab\\"><div>First tab</div></a></li><li class=\\"tabsComponent-tab\\"><a href=\\"#second-tab\\"><div>Second tab</div></a></li><li class=\\"tabsComponent-tab\\"><a href=\\"#third-tab\\"><div>Third tab</div></a></li></ul></div> <div class=\\"tabsComponent-panels\\"><div style=\\"\\">
                        First tab content
                    </div> <div style=\\"display: none;\\">
                        Second tab content
                    </div> <div style=\\"display: none;\\">
                        Third tab content
                    </div></div></div></div>
        "
`;

exports[`vue-tabs-component the life time of the cache can be set 1`] = `
Object {
  "vue-tabs-component.cache.blank": "{\\"value\\":\\"#first-tab\\",\\"expires\\":\\"2017-01-01T00:10:00.000Z\\"}",
}
`;

exports[`vue-tabs-component writes the hash of the last opened tab in local storage 1`] = `
Object {
  "vue-tabs-component.cache.blank": "{\\"value\\":\\"#third-tab\\",\\"expires\\":\\"2017-01-01T00:05:00.000Z\\"}",
}
`;
